# GWO-AMD

./: .env.example  .gitignore  AGENTS.md  AmdView.mhtml  CLAUDE.md  CONFIGURATION.md  GWO_div_year.ipynb  GWO_multiple_stns_to_stn.ipynb  JMA_DOWNLOADER_README.md  JMA_WEB_vs_GWO_comparison.md  README.md  config.py  dev_class_met.ipynb  environment.yml  jma_to_gwo_converter.py  jma_weather_downloader.py  mod_class_met.py  pyproject.toml  requirements-dev.txt  requirements_jma_downloader.txt  run_daily_met.ipynb  run_hourly_met.ipynb  setup.cfg  setup.py  smaster.index  stations.yaml  test_jma_downloader.py  test_jma_week.py  verify_gwo_conversion.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: GWO_div_year-checkpoint.ipynb  GWO_multiple_stns_to_stn-checkpoint.ipynb  run_daily_met-checkpoint.ipynb
notebooks/: GWO_div_year.ipynb  GWO_multiple_stns_to_stn.ipynb  dev_class_met.ipynb  run_hourly_met.ipynb
scripts/: build_amedas_station_catalog.py  build_station_catalog.py  run_jma-obsdl.sh
src/gwo_amd/: __init__.py  config.py  jma_obsdl_amd_downloader.py  jma_obsdl_downloader.py  jma_to_gwo_converter.py  jma_weather_downloader.py  mod_class_met.py  verify_gwo_conversion.py
src/gwo_amd/data/: amedas_stations.yaml
tests/: conftest.py  test_conversion.py  test_download_parsing.py  test_manual_jma_download.py  test_obsdl_amd_downloader.py  test_obsdl_downloader.py  test_station_catalog.py
tests/fixtures/: jma_hourly_sample.html  jma_obsdl_amedas_haneda_2020_01_01.csv  jma_sample.csv
