[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = ["notebooks", "src/gwo_amd/mod_class_met.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
