[metadata]
name = gwo-amd
version = 0.1.0
description = Japan Meteorological Agency's meteorological dataset handling tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Jun Sasaki
license = MIT
url = https://github.com/jsasaki-utokyo/GWO-AMD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    numpy
    pandas>=2.0.0
    matplotlib
    requests>=2.28.0
    lxml>=4.9.0
    html5lib>=1.1
    beautifulsoup4>=4.11.0
    python-dateutil
    python-dotenv
    PyYAML>=6.0

[options.packages.find]
where = src

[options.package_data]
gwo_amd = data/stations.yaml

[options.entry_points]
console_scripts =
    jma-download = gwo_amd.jma_weather_downloader:main

[options.extras_require]
dev =
    jupyter
    notebook
    ipykernel
    pytest
    ruff
test =
    pytest
